--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <p><strong>Álbumes más populares:</strong><br> "Take Care" <br> "Views" <br> "Scorpion"</p>
                     <p><strong>Banda:</strong><br> Solista</p>
                 </div>
-                <div class="boton"><button><a href="">Vidio</a></button></div>
+                <div class="boton"><button><a href="./source/video_drake.mp4" target="_blank">Video</a></button></div>
                 
             </article>
             <article id="eminem">
@@ -47,6 +47,7 @@
                     <p><strong>Álbumes más populares:</strong><br> "The Marshall Mathers LP" <br> "The Slim Shady LP" <br> "Recovery"</p>
                     <p><strong>Banda:</strong><br> Solista</p>
                 </div>
+                <div class="boton"><button><a href="./source/video_eminem.mp4" target="_blank">Video</a></button></div>
             </article>
             <article id="duki">
                 <h3>Duki</h3>
@@ -56,7 +57,8 @@
                     <p><strong>Género:</strong><br>Trap/Hip-Hop</p>
                     <p><strong>Álbumes más populares:</strong><br> "Sin Culpa" <br> "Super Sangre Joven" <br> "Goteo"</p>
                     <p><strong>Banda:</strong><br> Solista</p>
-                </div>                
+                </div>   
+                <div class="boton"><button><a href="./source/video_duki.mp4" target="_blank">Video</a></button></div>             
             </article>
             <article id="pm">
                 <h3>Post Malone</h3>
@@ -67,6 +69,7 @@
                     <p><strong>Álbumes más populares:</strong><br> "Hollywood's Bleeding" <br> "Beerbongs & Bentleys" <br> "Stoney"</p>
                     <p><strong>Banda:</strong><br> Solista</p>
                 </div>                
+                <div class="boton"><button><a href="./source/video_pm.mp4" target="_blank">Video</a></button></div>
             </article>
             <article id="bb">
                 <h3>Bad Bunny</h3>
@@ -77,11 +80,12 @@
                     <p><strong>Álbumes más populares:</strong><br> "X 100pre" <br> "YHLQMDLG" <br> "El Último Tour Del Mundo"</p>
                     <p><strong>Banda:</strong><br> Solista</p>
                 </div>
+                <div class="boton"><button><a href="./source/video_bb.mp4" target="_blank">Video</a></button></div>
             </article>
         </section>
     </main>
     <footer>
-        <div id="footer">fo</div>
+        <div id="footer"><blockquote cite="https://miguets.github.io/">Realizado por Miguel ✅</blockquote></div></div>
     </footer>
 </body>
 </html>
