--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
                     <p><strong>Álbumes más populares:</strong><br> "Take Care" <br> "Views" <br> "Scorpion"</p>
                     <p><strong>Banda:</strong><br> Solista</p>
                 </div>
-                <div class="boton"><button><a href="./source/video_drake.mp4" target="_blank">Video</a></button></div>
-                
+                <div id="vid">
+                    <video src="./source/video_drake.mp4" controls></video>
+                </div>
             </article>
             <article id="eminem">
                 <h3>Eminem</h3>
@@ -47,7 +48,9 @@
                     <p><strong>Álbumes más populares:</strong><br> "The Marshall Mathers LP" <br> "The Slim Shady LP" <br> "Recovery"</p>
                     <p><strong>Banda:</strong><br> Solista</p>
                 </div>
-                <div class="boton"><button><a href="./source/video_eminem.mp4" target="_blank">Video</a></button></div>
+                <div id="vid">
+                    <video src="./source/video_eminem.mp4" controls></video>
+                </div>
             </article>
             <article id="duki">
                 <h3>Duki</h3>
@@ -57,8 +60,10 @@
                     <p><strong>Género:</strong><br>Trap/Hip-Hop</p>
                     <p><strong>Álbumes más populares:</strong><br> "Sin Culpa" <br> "Super Sangre Joven" <br> "Goteo"</p>
                     <p><strong>Banda:</strong><br> Solista</p>
-                </div>   
-                <div class="boton"><button><a href="./source/video_duki.mp4" target="_blank">Video</a></button></div>             
+                </div>
+                <div id="vid">
+                    <video src="./source/video_duki.mp4" controls></video>
+                </div>          
             </article>
             <article id="pm">
                 <h3>Post Malone</h3>
@@ -69,7 +74,9 @@
                     <p><strong>Álbumes más populares:</strong><br> "Hollywood's Bleeding" <br> "Beerbongs & Bentleys" <br> "Stoney"</p>
                     <p><strong>Banda:</strong><br> Solista</p>
                 </div>                
-                <div class="boton"><button><a href="./source/video_pm.mp4" target="_blank">Video</a></button></div>
+                <div id="vid">
+                    <video src="./source/video_pm.mp4" controls></video>
+                </div>
             </article>
             <article id="bb">
                 <h3>Bad Bunny</h3>
@@ -80,7 +87,9 @@
                     <p><strong>Álbumes más populares:</strong><br> "X 100pre" <br> "YHLQMDLG" <br> "El Último Tour Del Mundo"</p>
                     <p><strong>Banda:</strong><br> Solista</p>
                 </div>
-                <div class="boton"><button><a href="./source/video_bb.mp4" target="_blank">Video</a></button></div>
+                <div id="vid">
+                    <video src="./source/video_bb.mp4" controls></video>
+                </div>
             </article>
         </section>
     </main>
